load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

js_library(
    name = "package_json",
    srcs = ["package.json"],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["//:node_modules/gts"],
)

npm_link_all_packages(name = "node_modules")
